# GameOfLife

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  test.cpp  tests.sh
docs/: main.typ  meta.typ
glad/include/glad/: glad.h
glad/src/: glad.c
src/: CMakeLists.txt  charts.py  main.cu  results.csv
